Added clear Button

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,6 +35,8 @@
             <h4>Real-time graph of Discord conversations</h4>
             <p>Connected to <b id="servers">several</b> servers</p>
             <p><b id="sessions">1</b> people viewing right now!</p>
+            <br>
+            <a onclick="clearNetwork()">Clear</a><br>
         </center>
     </div>
     <div id="network" style="width: 100%; height: 100%;"></div>
